--- a/public/projects/drop-that-domino/index.html
+++ b/public/projects/drop-that-domino/index.html
@@ -43,7 +43,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="">
+  <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
     <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
@@ -91,7 +91,7 @@
               </div>
     
               <div class="col-lg-4 order-first order-lg-last">
-                <div class="sticky-top" style="top: 2em">
+                <div class="sticky-top" style="top: 7em">
                   <div class="portfolio-info text-break">
                     <h3>Project information</h3>
                     <ul>
@@ -138,11 +138,10 @@
 <div class="container">
     <div class="socials-media text-center">
 
-    <ul class="list-unstyled">
-        <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-        <li><a href="#"><i class="bi bi-twitter"></i></a></li>
-        <li><a href="#"><i class="bi bi-instagram"></i></a></li>
-        <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+    <ul class="list-unstyled socials">
+        <li><a href="https://github.com/heySanj" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
+        <li><a href="https://dev.to/heysanj" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-dev"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/heysanj/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a></li>
     </ul>
 
     </div>
