Updated styling of Hero content

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
 
     <div class="container">
       <div class="hero-content">
-        <h1>Sanj <span class="typed" data-typed-items="the Designer., the Developer., the Coder., the Man!"></span></h1>
+        <h1>Sanj <span class="typed" data-typed-items="the Designer., the Web Dev., the Coder., the Man!, the Developer."></span></h1>
         <p>Full Stack Web Dev & Graphic Designer</p>
 
         <ul class="list-unstyled list-social">
