Added honeypot to contact form

--- a/public/index.html
+++ b/public/index.html
@@ -692,6 +692,12 @@
                         <input type="text" class="form-control" name="subject" id="subject" placeholder="SUBJECT" required>
                       </div>
                     </div>
+
+                    <div class="col-lg-12 form-gotcha">
+                        <div class="form-group">
+                          <input type="text" class="form-control" name="_gotcha" id="gotChaMessage" placeholder="Message" required>
+                        </div>
+                    </div>
   
                     <div class="col-lg-12">
                       <div class="form-group">
